k8s/platform/mesh/overlays/live/linkerd-webhook-ca-bundle-patches.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: linkerd-proxy-injector-webhook-config
webhooks:
  - name: linkerd-proxy-injector.linkerd.io
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUJ3RENDQVdlZ0F3SUJBZ0lVYWxOWncvck5LRGt1NXM2TUpFUzd0aGVnTlJFd0NnWUlLb1pJemowRUF3SXcKTmpFME1ESUdBMVVFQXd3cmJHbHVhMlZ5WkMxM1pXSm9iMjlyY3k1c2FYWmxMbXhwYm10bGNtUXVZMngxYzNSbApjaTVzYjJOaGJEQWVGdzB5TmpBME1Ua3hOekF5TURCYUZ3MHpOakEwTVRZeE56QXlNREJhTURZeE5EQXlCZ05WCkJBTU1LMnhwYm10bGNtUXRkMlZpYUc5dmEzTXViR2wyWlM1c2FXNXJaWEprTG1Oc2RYTjBaWEl1Ykc5allXd3cKV1RBVEJnY3Foa2pPUFFJQkJnZ3Foa2pPUFFNQkJ3TkNBQVF6ZzJ2KzJoaDgyeStnWDlhK05tVmhxcVNqOWJ0agpsUDQ3QVA4a2du [...]
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: linkerd-policy-validator-webhook-config
webhooks:
  - name: linkerd-policy-validator.linkerd.io
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUJ3RENDQVdlZ0F3SUJBZ0lVYWxOWncvck5LRGt1NXM2TUpFUzd0aGVnTlJFd0NnWUlLb1pJemowRUF3SXcKTmpFME1ESUdBMVVFQXd3cmJHbHVhMlZ5WkMxM1pXSm9iMjlyY3k1c2FYWmxMbXhwYm10bGNtUXVZMngxYzNSbApjaTVzYjJOaGJEQWVGdzB5TmpBME1Ua3hOekF5TURCYUZ3MHpOakEwTVRZeE56QXlNREJhTURZeE5EQXlCZ05WCkJBTU1LMnhwYm10bGNtUXRkMlZpYUc5dmEzTXViR2wyWlM1c2FXNXJaWEprTG1Oc2RYTjBaWEl1Ykc5allXd3cKV1RBVEJnY3Foa2pPUFFJQkJnZ3Foa2pPUFFNQkJ3TkNBQVF6ZzJ2KzJoaDgyeStnWDlhK05tVmhxcVNqOWJ0agpsUDQ3QVA4a2du [...]
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: linkerd-sp-validator-webhook-config
webhooks:
  - name: linkerd-sp-validator.linkerd.io
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUJ3RENDQVdlZ0F3SUJBZ0lVYWxOWncvck5LRGt1NXM2TUpFUzd0aGVnTlJFd0NnWUlLb1pJemowRUF3SXcKTmpFME1ESUdBMVVFQXd3cmJHbHVhMlZ5WkMxM1pXSm9iMjlyY3k1c2FYWmxMbXhwYm10bGNtUXVZMngxYzNSbApjaTVzYjJOaGJEQWVGdzB5TmpBME1Ua3hOekF5TURCYUZ3MHpOakEwTVRZeE56QXlNREJhTURZeE5EQXlCZ05WCkJBTU1LMnhwYm10bGNtUXRkMlZpYUc5dmEzTXViR2wyWlM1c2FXNXJaWEprTG1Oc2RYTjBaWEl1Ykc5allXd3cKV1RBVEJnY3Foa2pPUFFJQkJnZ3Foa2pPUFFNQkJ3TkNBQVF6ZzJ2KzJoaDgyeStnWDlhK05tVmhxcVNqOWJ0agpsUDQ3QVA4a2du [...]
